--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "dev": "parcel ./src/index.html --no-cache --open",
     "start": "npm run dev",
-    "build": "parcel build ./src/index.html --public-url ./ --no-cache -d build"
+    "build": "parcel build ./src/index.html --public-url ./ --no-cache -d build",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf dist README.MD README.md src .postcssrc .posthtmlrc package.json"
+  },
+  "gh-pages-deploy": {
+    "staticpath": "build",
+    "post": [
+      "clean-source"
+    ]
   },
   "keywords": [],
   "author": "",
